fixed overflows and media query

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   padding: 0;
   background: linear-gradient(to right, #050505, #333333);
   color: #f0f8ff;
+  overflow-x: hidden !important;
 }
 /* width */
 ::-webkit-scrollbar {
@@ -22,7 +23,7 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #050505;
+  background: #ffe7ba;
 }
 
 /* Handle on hover */
@@ -32,11 +33,21 @@ body {
 .me-hero {
   width: 100%;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #353535;
+}
+.img-con {
 }
 .my-img {
-  background: url(./image/me.png) no-repeat center;
-  height: 100vh;
+  background: url("./image/me.png") no-repeat center;
   background-size: contain;
+  height: 100vh;
+  background-attachment: fixed;
+  margin: 0 !important;
+  padding: 0 !important;
+  border: none !important;
 }
 .my-name1 {
   font-family: "Unbounded", cursive;
@@ -65,18 +76,32 @@ body {
   position: absolute;
   color: #3d3d3d;
   mix-blend-mode: difference;
-  top: 60%;
+  top: -22vh;
   left: 50%;
+  -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
 }
+.my-name3-con {
+  mix-blend-mode: difference;
+}
 section {
-  margin: 0;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  min-height: 100vh;
+  font-family: "Playfair Display", serif;
+  font-size: 50px;
 }
 section img {
   margin: 0;
   width: 99vw;
 }
-@media only screen and (max-width: 860px) {
+.my-proj {
+  background: #050505;
+  height: 300vh;
+}
+@media only screen and (max-width: 1020px) {
   .my-img {
     background-size: cover;
   }
